--- a/index.html
+++ b/index.html
@@ -24,6 +24,29 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <!--Navbar-->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <i class="fas fa-camera"></i>
+            <a href="#">Sol</a>
+        <ul class="navbar__menu">
+            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item">About</li>
+            <li class="navbar__menu__item">Skills</li>
+            <li class="navbar__menu__item">Work</li>
+            <li class="navbar__menu__item">Testimonials</li>
+            <li class="navbar__menu__item">Contect</li>
+        </ul>
+    </nav>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- testimonials -->
+    <section id="testimonials"></section>
+    <!-- Contect -->
+    <section id="contect"></section>
 </body>
 </html>
