--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sol's portfolio</title>
     <meta name="description" content="portfolio for Sol's frontend">
     <meta name="author" content="Sol">
-    <link rel="icon" type="image/png" href="imgs/favicon.png">
+    <link rel="icon" type="image/png" href="imgs/favicon2.png">
     <script 
         src="https://kit.fontawesome.com/8f5eaaa454.js" 
         crossorigin="anonymous"
@@ -38,6 +38,19 @@
             <li class="navbar__menu__item">Contect</li>
         </ul>
     </nav>
+
+    <!-- Home -->
+    <section id="home">
+        <img 
+            src="imgs/profile.png" 
+            alt="Sol's profile photo" 
+            class="home__avatar"
+        />
+        <h1 class="home__title">Hello, <br>I'm Deunsol Park</h1>
+        <h2 class="home__description">A Software Engineer whose hobby is photography.</h2>
+        <button class="home__contect">Contect Me</button>
+    </section>
+
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
