--- a/index.html
+++ b/index.html
@@ -52,7 +52,51 @@
     </section>
 
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>I am a passionate developer who has made a housekeeping book with the Java project and led the front-end and back-end projects to create a wine introduction homepage using bootstrap and Oracle database at the academy. Now I am studying mainly at the front-end, but I am interested in full stack.
+        </p>
+        <div class="about__major">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScript</div>
+            </div>
+
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-java"></i>
+                </div>
+                <div class="major__title">Back-end</div>
+                <div class="major__description">Java, JavaScript</div>
+            </div>
+
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fas fa-database"></i>
+                </div>
+                <div class="major__title">Database</div>
+                <div class="major__description">Oracle, Mysql</div>
+            </div>
+        </div>
+
+        <div class="about__academy">
+            <div class="academy">
+                <img src="imgs/academy/logo-kgitbank.png" alt="kgitbank" class="academy__logo">
+                <p class="academy__name">Studied Python, C, C++ at KG ITBANK</p>
+                <p class="academy__period">2018 July - 2018 Nov</p>
+            </div>
+
+            <div class="academy">
+                <img src="imgs/academy/logo-kgitbank.png" alt="kgitbank" class="academy__logo">
+                <p class="academy__name">Studied Front-end and Back-end at KG ITBANK</p>
+                <p class="academy__period">2018 Nov - 2019 June</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
