--- a/index.html
+++ b/index.html
@@ -98,9 +98,158 @@
     </section>
 
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            Experience with all phases of the software life-cycle. Passion for learning new teachnologies. Capable of working within a team environment and independently. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+        </p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>96%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                    <div class="skill__description">
+                        <span>CSS</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                    <div class="skill__description">
+                        <span>JavaScript</span>
+                        <span>88%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                    <div class="skill__description">
+                        <span>Java</span>
+                        <span>85%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                    <div class="skill__description">
+                        <span>database</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Eclipse IDE</span></li>
+                        <li><span>Sublime Text</span></li>
+                        <li><span>Oracle</span></li>
+                        <li><span>Toad</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                    </ul>
+                </div>
+            </div>
+    </section>
+
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My Work</h1>
+        <h2>projects</h2>
+        <div class="work__categories">
+            <button class="category__btn">
+                All<span class="category__count">8</span>
+            </button>
+            <button class="category__btn">
+                Front-end<span class="category__count">3</span>
+            </button>
+            <button class="category__btn">
+                Back-end<span class="category__count">3</span>
+            </button>
+            <button class="category__btn">
+                Database<span class="category__count">2</span>
+            </button>
+        </div>
+
+        <div class="work__projects">
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/housekeep.png" alt="Housekeeping book">
+            <div class="project__description">
+                <h3>Housekeeping boook</h3>
+                <span>Make housekeeping book with Java and Oracle</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/wine_introducer.png" alt="Wine Introducer">
+            <div class="project__description">
+                <h3>Wine Introducer</h3>
+                <span>Make Wine Introducer with Jsp, HTML, CSS and Oracle</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/oracle.png" alt="Oracle DBMS">
+            <div class="project__description">
+                <h3>Oracle DBMS</h3>
+                <span>Use Oracle DBMS with Toad</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/example.png" alt="Portfolio page">
+            <div class="project__description">
+                <h3>Portfolio page</h3>
+                <span>Make Portfolio page with HTML and CSS</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/example.png" alt="example">
+            <div class="project__description">
+                <h3>example</h3>
+                <span>example</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/example.png" alt="example">
+            <div class="project__description">
+                <h3>example</h3>
+                <span>example</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/example.png" alt="example">
+            <div class="project__description">
+                <h3>example</h3>
+                <span>example</span>
+            </div>
+            </a>
+
+            <a href="https://www.youtube.com/" class="project" target="blank">
+                <img class="project__img" src="imgs/projects/example.png" alt="example">
+            <div class="project__description">
+                <h3>example</h3>
+                <span>example</span>
+            </div>
+            </a>
+        </div>
+    </section>
     <!-- testimonials -->
     <section id="testimonials"></section>
     <!-- Contect -->
