--- a/index.html
+++ b/index.html
@@ -250,8 +250,38 @@
             </a>
         </div>
     </section>
+
     <!-- testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img 
+                    class="testimonial__avatar" 
+                    src="imgs/testimonial/people1.jpg" 
+                    alt="people"
+                >
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates excepturi, temporibus consectetur vitae, omnis magni repellat ea mollitia, alias iste nesciunt cumque. Ratione asperiores soluta tempora quasi. Enim, officia quibusdam.</p>
+                    <p class="name"><a href="">Sol</a> / KG ITBANK</p>
+                </div>
+            </div>
+
+            <div class="testimonial">
+                <img 
+                    class="testimonial__avatar" 
+                    src="imgs/testimonial/people2.jpg" 
+                    alt="people"
+                >
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates excepturi, temporibus consectetur vitae, omnis magni repellat ea mollitia, alias iste nesciunt cumque. Ratione asperiores soluta tempora quasi. Enim, officia quibusdam.</p>
+                    <p class="name"><a href="">Tim Cook</a> / Apple</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Contect -->
     <section id="contect"></section>
 </body>
