--- a/index.html
+++ b/index.html
@@ -281,8 +281,20 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Contect -->
-    <section id="contect"></section>
+    <section id="contect">
+        <h1 class="contect__title">Let's talk</h1>
+        <h2 class="contect__email">deunsol916@gmail.com</h2>
+        <div class="contect__links">
+            <a href="https://github.com/emsthf" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+        <p class="contect__right">2021 Deunsol Park - All right reserved</p>
+    </section>
 </body>
 </html>
