--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
         <div class="navbar__logo">
             <i class="fas fa-camera"></i>
             <a href="#">Sol</a>
-        <ul class="navbar__menu">
-            <li class="navbar__menu__item">Home</li>
-            <li class="navbar__menu__item">About</li>
-            <li class="navbar__menu__item">Skills</li>
-            <li class="navbar__menu__item">Work</li>
-            <li class="navbar__menu__item">Testimonials</li>
-            <li class="navbar__menu__item">Contect</li>
-        </ul>
+        </div>
+        <div class="navbar__menu">
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item active">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">Work</li>
+                <li class="navbar__menu__item">Testimonials</li>
+                <li class="navbar__menu__item">Contect</li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Home -->
