--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>I am a passionate developer who has made a housekeeping book with the Java project and led the front-end and back-end projects to create a wine introduction homepage using bootstrap and Oracle database at the academy. Now I am studying mainly at the front-end, but I am interested in full stack.
         </p>
-        <div class="about__major">
+        <div class="about__majors">
             <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">HTML, CSS, JavaScript</div>
             </div>
 
@@ -72,7 +72,7 @@
                 <div class="major__icon">
                     <i class="fab fa-java"></i>
                 </div>
-                <div class="major__title">Back-end</div>
+                <h2 class="major__title">Back-end</h2>
                 <div class="major__description">Java, JavaScript</div>
             </div>
 
@@ -80,7 +80,7 @@
                 <div class="major__icon">
                     <i class="fas fa-database"></i>
                 </div>
-                <div class="major__title">Database</div>
+                <h2 class="major__title">Database</h2>
                 <div class="major__description">Oracle, Mysql</div>
             </div>
         </div>
@@ -88,20 +88,24 @@
         <div class="about__academy">
             <div class="academy">
                 <img src="imgs/academy/logo-kgitbank.png" alt="kgitbank" class="academy__logo">
-                <p class="academy__name">Studied Python, C, C++ at KG ITBANK</p>
+                <div class="academy__description">
+                    <p class="academy__name">Studied Python, C, C++ at KG ITBANK</p>
                 <p class="academy__period">2018 July - 2018 Nov</p>
+                </div>  
             </div>
 
             <div class="academy">
                 <img src="imgs/academy/logo-kgitbank.png" alt="kgitbank" class="academy__logo">
-                <p class="academy__name">Studied Front-end and Back-end at KG ITBANK</p>
+                <div class="academy__description">
+                    <p class="academy__name">Studied Front-end and Back-end at KG ITBANK</p>
                 <p class="academy__period">2018 Nov - 2019 June</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -169,7 +173,7 @@
     </section>
 
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My Work</h1>
         <h2>projects</h2>
         <div class="work__categories">
@@ -255,7 +259,7 @@
     </section>
 
     <!-- testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -286,7 +290,7 @@
     </section>
 
     <!-- Contect -->
-    <section id="contect">
+    <section id="contect" class="section">
         <h1 class="contect__title">Let's talk</h1>
         <h2 class="contect__email">deunsol916@gmail.com</h2>
         <div class="contect__links">
