--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
         <p>I am a passionate developer who has made a housekeeping book with the Java project and led the front-end and back-end projects to create a wine introduction homepage using bootstrap and Oracle database at the academy. Now I am studying mainly at the front-end, but I am interested in full stack.
         </p>
@@ -106,7 +106,8 @@
 
     <!-- Skills -->
     <section id="skills" class="section">
-        <h1>Skills</h1>
+        <div class="section__container">
+            <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
             Experience with all phases of the software life-cycle. Passion for learning new teachnologies. Capable of working within a team environment and independently. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
@@ -120,35 +121,43 @@
                         <span>96%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 96%;"></div>
                     </div>
+                </div>
+                <div class="skill">
                     <div class="skill__description">
                         <span>CSS</span>
                         <span>80%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 80%;"></div>
                     </div>
+                </div>
+                <div class="skill">
                     <div class="skill__description">
                         <span>JavaScript</span>
                         <span>88%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 88%;"></div>
                     </div>
+                </div>
+                <div class="skill">
                     <div class="skill__description">
                         <span>Java</span>
                         <span>85%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 85%;"></div>
                     </div>
+                </div>
+                <div class="skill">
                     <div class="skill__description">
                         <span>database</span>
                         <span>90%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 90%;"></div>
                     </div>
                 </div>
             </div>
@@ -170,6 +179,7 @@
                     </ul>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- Work -->
