--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
 
     <!-- Home -->
     <section id="home">
-        <img 
-            src="imgs/profile.png" 
-            alt="Sol's profile photo" 
-            class="home__avatar"
-        />
-        <h1 class="home__title">Hello, <br>I'm Deunsol Park</h1>
-        <h2 class="home__description">A Software Engineer whose hobby is photography.</h2>
-        <button class="home__contect">Contect Me</button>
+        <div class="home__container">
+            <img 
+                src="imgs/profile.png" 
+                alt="Sol's profile photo" 
+                class="home__avatar"
+            />
+            <h1 class="home__title">Hello, <br>I'm Deunsol Park</h1>
+            <h2 class="home__description">A Software Engineer whose hobby is photography.</h2>
+            <button class="home__contect">Contect Me</button>
+        </div>
     </section>
 
     <!-- About -->
